syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos.UserAdmin";

package userAdmin;

service UserAdminService {
  // User operations
  rpc GetUsers (UserParameterRequest) returns (UserPageResponse);
  rpc GetUser (UserIdRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (ResponseDto);
  rpc UpdateUser (UpdateUserRequest) returns (ResponseDto);
  rpc LoginByUser (UserIdRequest) returns (LoginResponse);
  
  // User Billing operations
  rpc GetUserBillings (UserIdRequest) returns (UserBillingListResponse);
  rpc GetUserBilling (BillingIdRequest) returns (UserBillingResponse);
  rpc CreateUserBilling (CreateUserBillingRequest) returns (ResponseDto);
  rpc UpdateUserBilling (UpdateUserBillingRequest) returns (ResponseDto);
  rpc DeleteUserBilling (BillingIdRequest) returns (ResponseDto);
  
  // User Shipping operations
  rpc GetUserShippings (UserIdRequest) returns (UserShippingListResponse);
  rpc GetUserShipping (ShippingIdRequest) returns (UserShippingResponse);
  rpc CreateUserShipping (CreateUserShippingRequest) returns (ResponseDto);
  rpc UpdateUserShipping (UpdateUserShippingRequest) returns (ResponseDto);
  rpc DeleteUserShipping (ShippingIdRequest) returns (ResponseDto);
  
  // User Role operations
  rpc GetUserRoles (UserIdRequest) returns (UserRoleListResponse);
  rpc AddUserRole (AddUserRoleRequest) returns (ResponseDto);
  rpc DeleteUserRole (DeleteUserRoleRequest) returns (ResponseDto);
}

// Common types
message ResponseDto {
  bool status = 1;
  string message = 2;
  int32 code = 3;
}

// User messages
message UserParameterRequest {
  string searchKey = 1;
  int32 pageId = 2;
  int32 take = 3;
}

message UserPageResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  repeated UserDto items = 4;
  int32 totalRow = 5;
  int32 pageId = 6;
  int32 take = 7;
}

message UserDto {
  int32 id = 1;
  string userName = 2;
  string email = 3;
  string phoneNumber = 4;
  string firstName = 5;
  string lastName = 6;
  int32 walletCredit = 7;
  bool isActive = 8;
  string createDate = 9;
  string lastLoginDate = 10;
  string nationalCode = 11;
  string address = 12;
  string userAvatar = 13;
  repeated string roles = 14;
}

message UserIdRequest {
  int32 userId = 1;
}

message UserResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  UserDto user = 4;
}

message CreateUserRequest {
  string userName = 1;
  string email = 2;
  string phoneNumber = 3;
  string firstName = 4;
  string lastName = 5;
  string password = 6;
  string nationalCode = 7;
  string address = 8;
  int32 walletCredit = 9;
  bool isActive = 10;
}

message UpdateUserRequest {
  int32 id = 1;
  string userName = 2;
  string email = 3;
  string phoneNumber = 4;
  string firstName = 5;
  string lastName = 6;
  string password = 7;
  string nationalCode = 8;
  string address = 9;
  int32 walletCredit = 10;
  bool isActive = 11;
}

message LoginResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  string token = 4;
}

// User Billing messages
message BillingIdRequest {
  int32 billingId = 1;
}

message UserBillingListResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  repeated UserBillingDto items = 4;
}

message UserBillingDto {
  int32 id = 1;
  int32 userId = 2;
  string firstName = 3;
  string lastName = 4;
  string nationalCode = 5;
  string phoneNumber = 6;
  string address = 7;
  string postalCode = 8;
  string email = 9;
  string country = 10;
  string city = 11;
  string company = 12;
  string province = 13;
}

message UserBillingResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  UserBillingDto billing = 4;
}

message CreateUserBillingRequest {
  int32 userId = 1;
  string firstName = 2;
  string lastName = 3;
  string nationalCode = 4;
  string phoneNumber = 5;
  string address = 6;
  string postalCode = 7;
  string email = 8;
  string country = 9;
  string city = 10;
  string company = 11;
  string province = 12;
}

message UpdateUserBillingRequest {
  int32 id = 1;
  int32 userId = 2;
  string firstName = 3;
  string lastName = 4;
  string nationalCode = 5;
  string phoneNumber = 6;
  string address = 7;
  string postalCode = 8;
  string email = 9;
  string country = 10;
  string city = 11;
  string company = 12;
  string province = 13;
}

// User Shipping messages
message ShippingIdRequest {
  int32 shippingId = 1;
}

message UserShippingListResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  repeated UserShippingDto items = 4;
}

message UserShippingDto {
  int32 id = 1;
  int32 userId = 2;
  string firstName = 3;
  string lastName = 4;
  string nationalCode = 5;
  string phoneNumber = 6;
  string address = 7;
  string postalCode = 8;
  string country = 9;
  string city = 10;
  string company = 11;
  string province = 12;
  bool isDefault = 13;
}

message UserShippingResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  UserShippingDto shipping = 4;
}

message CreateUserShippingRequest {
  int32 userId = 1;
  string firstName = 2;
  string lastName = 3;
  string nationalCode = 4;
  string phoneNumber = 5;
  string address = 6;
  string postalCode = 7;
  string country = 8;
  string city = 9;
  string company = 10;
  string province = 11;
  bool isDefault = 12;
}

message UpdateUserShippingRequest {
  int32 id = 1;
  int32 userId = 2;
  string firstName = 3;
  string lastName = 4;
  string nationalCode = 5;
  string phoneNumber = 6;
  string address = 7;
  string postalCode = 8;
  string country = 9;
  string city = 10;
  string company = 11;
  string province = 12;
  bool isDefault = 13;
}

// User Role messages
message UserRoleListResponse {
  bool status = 1;
  string message = 2;
  int32 code = 3;
  repeated UserRoleDto items = 4;
}

message UserRoleDto {
  string roleId = 1;
  string roleName = 2;
  bool isSelected = 3;
}

message AddUserRoleRequest {
  int32 userId = 1;
  string roleId = 2;
}

message DeleteUserRoleRequest {
  int32 userId = 1;
  string roleId = 2;
} 